--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,19 +5,19 @@
 
 @layer base {
   :root {
-    --background: 240,14.3%,97.3%;
+    --background: 240 14.3% 97.3%;
     --foreground: 224 71.4% 4.1%;
     --card: 0 0% 100%;
     --card-foreground: 224 71.4% 4.1%;
     --popover: 0 0% 100%;
     --popover-foreground: 224 71.4% 4.1%;
-    --primary: 162.3,72.1%,38.1%;
+    --primary: 162.3 72.1% 38.1%;
     --primary-foreground: 210 20% 98%;
     --secondary: 220 14.3% 95.9%;
     --secondary-foreground: 220.9 39.3% 11%;
     --muted: 220 14.3% 95.9%;
     --muted-foreground: 220 8.9% 46.1%;
-    --accent: 240,6.7%,91.2%;
+    --accent: 240 6.7% 91.2%;
     --accent-foreground: 220.9 39.3% 11%;
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 210 20% 98%;
@@ -33,13 +33,13 @@
   }
 
   .dark {
-    --background: 233.7,32.2%,11.6%;
+    --background: 233.7 32.2% 11.6%;
     --foreground: 210 20% 98%;
-    --card: 229.3,27.5%,20%;
+    --card: 229.3 27.5%,20%;
     --card-foreground: 210 20% 98%;
-    --popover: 229.3,27.5%,20%; /* Ajustado para combinar con el card */
+    --popover: 229.3 27.5% 20%; /* Ajustado para combinar con el card */
     --popover-foreground: 210 20% 98%; /* Mantiene buen contraste */
-    --primary: 162.3,72.1%,35.1%;
+    --primary: 162.3 72.1% 35.1%;
     --primary-foreground: 210 20% 98%;
     --secondary: 215 27.9% 16.9%;
     --secondary-foreground: 210 20% 98%;
